# waste-detection

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  raw_data.dvc  setup_project.py  train.py
.dvc/: config
models/current_best/: best.pt.dvc  metadata.yaml
projects/waste_detection/: pipeline.py
tests/: __init__.py  conftest.py  pipeline_test_utils.py  rtmdet_dvc_sitecustomize.py  test_augmentation.py  test_class_mapping.py  test_config_loader.py  test_contract_dvc_stages.py  test_contract_pipeline.py  test_cvat_paths.py  test_duplicates.py  test_dvc_repro.py  test_empty_images.py  test_export_baseline.py  test_folder_subsets.py  test_mmdet_backend_paths.py  test_optional_weight_deps.py  test_pipeline_e2e.py  test_pipeline_heavy_e2e.py  test_pipeline_split_evaluate.py  test_rfdetr_adapter.py  test_rfdetr_backend_paths.py  test_rtmdet_adapter.py  ultralytics_stub.py
tests/data/: test_augmentation.py  test_class_mapping.py  test_config_loader.py  test_cvat_paths.py  test_duplicates.py  test_empty_images.py  test_folder_subsets.py
tests/pipeline/: test_contract_dvc_stages.py  test_contract_pipeline.py  test_dvc_repro.py  test_pipeline_e2e.py  test_pipeline_heavy_e2e.py  test_pipeline_split_evaluate.py  test_project_model_contracts.py  test_project_pipeline_wrapper.py
tests/utils/: __init__.py  test_path_ops.py
tests/wrappers/: test_mmdet_backend_paths.py  test_optional_weight_deps.py  test_rfdetr_adapter.py
tools/: export_baseline.py
tools/analyse_class_distribution/: .gitignore  README.md  class_distribution_analyzer.py  pyproject.toml
tools/annotate_videos/: README.md  annotate_videos.py  pyproject.toml
tools/filter_cleaning_runs/: .gitignore  README.md  filter_cleaning_runs.py  main.py  pyproject.toml
tools/filter_cleaning_runs/src/: classifier.py  gps.py  types.py  video.py
tools/frame-mining/: export_cvat_format.py  mine_videos_sam3_yolo.py  poetry.toml  pyproject.toml
tools/frame-mining/auto/: README.md  make_cvat_folder.py  mine_frames_auto.py
tools/frame-mining/interactive/: README.md
tools/frame-mining/shared/: __init__.py
tools/mine_frames_from_video/: README.md  mine_frames_from_video.py  pyproject.toml
tools/mmdet/: download_rtmdet_assets.py
tools/preannotate_subclasses/: .gitignore  README.md  preannotate_subclasses.py  pyproject.toml
tools/sam3_eval/: pyproject.toml  sam3_eval.py
tools/sam3_eval/output/: metrics.json  predictions.json
tools/sam3_eval_on_testset/: analyse_prompt_contribution.py  sam3_eval.py
trainer_core/: README.md  cli.py  types.py
trainer_core/backends/: __init__.py  mmdet.py  rfdetr.py  shared.py  yolo.py
trainer_core/config/: loader.py  overrides.py  schema.py
trainer_core/dataprep/: augmentation.py  class_mapping.py  dataset_builder.py  dataset_yaml.py  find_duplicates.py  labels.py  outputs.py  sampling.py  source_ingest.py  transforms.py  types.py
trainer_core/datasets/: __init__.py  yolo_yaml.py
trainer_core/evaluation/: extras.py  merged_subset_metrics.py  reports.py  scene_metrics.py  validate.py  visual_comparison.py
trainer_core/pipeline/: __init__.py  check_optional_weight_deps.py  evaluate_stage.py  model_state.py  prepare_stage.py  train_stage.py
trainer_core/plugins/: replay.py
trainer_core/utils/: __init__.py  path_ops.py
trainer_core/wrappers/: prediction_types.py  prediction_utils.py  rfdetr.py  rtmdet.py  shared.py  yolo_eval.py
yolov8_training/: train_pipeline.py
yolov8_training/backends/: __init__.py  rfdetr_backend.py  yolo_backend.py
yolov8_training/utils/: augmentation.py  data_utils.py  evaluate.py  export_baseline.py  filter_duplicates.py  find_duplicates.py  labels_to_txt.py  replay.py  rfdetr_adapter.py  seed_replay.py  show_bboxes.py  snapshot_stats.py  types.py
