[project]
name = "annotate-videos"
version = "0.1.0"
description = ""
authors = [
    {name = "flonix8",email = "flstanek@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "ultralytics (>=8.3.171,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
