[project]
name = "filter-cleaning-runs"
version = "0.1.0"
description = ""
authors = [
    {name = "flonix8",email = "flstanek@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynmeagps (>=1.0.50,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ultralytics (>=8.3.177,<9.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
