[tool.poetry]
name = "mine-frames-from-video"
version = "0.1.0"
description = "Interactive video review and hard example capture with live YOLO"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.0.97"
opencv-python = "^4.10.0.84"
numpy = "^2.2.0"
pillow = "^11.0.0"
imagehash = "^4.3.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

